change site desc

--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,5 @@
 siteName: Clan Drones
-siteDesc: This is Clan Drones site, come take a look
+siteDesc: Somos un grupo de entuciastas de los drones con la finalidad de compartir conocimientos y experiencias.
 author:
   name: Zero
   site: https://floresbenavides.com buy me a coffe
