add mercancía section

--- a/site.yml
+++ b/site.yml
@@ -9,4 +9,5 @@ pages:  # this node is optional
   Miembros: /miembros
   Entradas: /entradas
   Acerca-de-nosotros: /acerca-de-nosotros
+  Mercancía: /mercancia
   NOM-107: /NOM-107-SCT3-2019
