--- a/site.yml
+++ b/site.yml
@@ -10,4 +10,5 @@ pages:  # this node is optional
   Entradas: /entradas
   Acerca-de-nosotros: /acerca-de-nosotros
   Mercancía: /mercancia
+  Código-de-conducta: /codigo-de-conducta
   NOM-107: /NOM-107-SCT3-2019
